--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "concurrently": "^6.4.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "http": "^0.0.1-security",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-uid": "^2.3.1",
     "sass": "^1.43.4",
     "typescript": "^4.4.4",
+    "uid": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -25,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently --kill-others \\\"npm run start\\\" \\\"node server/index.js\\\""
+    "dev": "concurrently --kill-others \"npm run start\" \"node server/index.js\""
   },
   "eslintConfig": {
     "extends": [
